[add] 세션 및 레디스 연동 [add] 자동로그인 api 추가 [add] 유저팀의 플레이어리스트 DB 가져오기
