# routers/router.go
@@ -1,9 +1,12 @@
 package routers
 
 import (
+	"github.com/gin-contrib/sessions"
+	"github.com/gin-contrib/sessions/redis"
 	"github.com/gin-gonic/gin"
 
 	_ "github.com/jameschun7/go-gin-sample/docs"
+	"github.com/jameschun7/go-gin-sample/pkg/setting"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
 
@@ -15,7 +18,17 @@ func InitRouter() *gin.Engine {
 	r.Use(gin.Logger())
 	r.Use(gin.Recovery())
 
-	r.POST("/auth", api.GetAuth)
+	store, _ := redis.NewStore(
+		setting.RedisSetting.MaxIdle,
+		"tcp",
+		setting.RedisSetting.Host,
+		setting.RedisSetting.Password,
+		[]byte("secret"))
+
+	r.Use(sessions.Sessions("gamepub", store))
+
+	r.POST("/api/login", api.Login)
+	r.GET("/api/autologin", api.AutoLogin)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	return r
